--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "algorithm": "cpp",
         "utility": "cpp",
         "iostream": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "cmath": "cpp"
     }
 }
